test/runnable/extra-files/test18456.d
import lib18456;

void main()
{
    assert(initVar == 42);
}
