test/fail_compilation/fail39.d
void main()
{
void foo() {}
void function() bar = function void() { foo(); };
}

